# tormenta_rpg

./: .gitignore  CMakeLists.txt
headers/: armor.hpp  backpack.hpp  character.hpp  creature.hpp  defenceItem.hpp  diceRoll.hpp  equipableItem.hpp  fileDealer.hpp  fileLoader.hpp  game.hpp  hero.hpp  inventory.hpp  item.hpp  itemGenerator.hpp  magicalItem.hpp  party.hpp  rollSet.hpp  sheet.hpp  shield.hpp  store.hpp  utils.hpp  weapon.hpp
headers/enum-types/: armorType.hpp  creatureType.hpp  damageType.hpp  dice.hpp  race.hpp  storeType.hpp  treasureType.hpp  weaponType.hpp
headers/exception-types/: cancelException.hpp  fullInventory.hpp  fulllBackpack.hpp  fulllInventory.hpp  nullObject.hpp
source/: CMakeLists.txt  armor.cpp  backpack.cpp  character.cpp  creature.cpp  defenceItem.cpp  diceRoll.cpp  equipableItem.cpp  fileDealer.cpp  fileLoader.cpp  game.cpp  hero.cpp  inventory.cpp  item.cpp  itemGenerator.cpp  magicalItem.cpp  main.cpp  party.cpp  rollSet.cpp  sheet.cpp  shield.cpp  store.cpp  utils.cpp  weapon.cpp
source/hero-classes/: mage.cpp  mage.hpp  ranger.cpp  ranger.hpp  warrior.cpp  warrior.hpp
states/: CMakeLists.txt  characterCreationState.cpp  gameState.cpp  inventoryState.cpp  mainMenuState.cpp  newGameState.cpp  partyOverall.cpp  partyOverallState.cpp  playableState.cpp  state.cpp  storeState.cpp
states/headers/: characterCreationState.hpp  gameState.hpp  inventoryState.hpp  mainMenuState.hpp  newGameState.hpp  partyOverall.hpp  partyOverallState.hpp  playableState.hpp  state.hpp  storeState.hpp
